# ProjektUXP1A

./: CMakeLists.txt  Lexer.cpp  Memory.cpp  Memory.h  Symbol.cpp  Symbol.h  Token.cpp  Token.h  main.cpp
builtins/: addHi.cpp  echo.cpp  ls.cpp  pwd.cpp  rm.cpp  touch.cpp
exception/: CommandNotFoundException.cpp  CommandNotFoundException.h  ParserException.cpp  ParserException.h
lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
parser/: Parser.cpp  Parser.h
parser/ast/: BinaryOpNode.cpp  BinaryOpNode.h  CommandNode.cpp  CommandNode.h  ExportNode.cpp  ExportNode.h  FilenameNode.cpp  FilenameNode.h  NameNode.cpp  NameNode.h  Node.cpp  Node.h  PipeNode.cpp  PipeNode.h  ProgramCallNode.cpp  ProgramCallNode.h  QuotedNode.cpp  QuotedNode.h  SubstitutionNode.cpp  SubstitutionNode.h  VarAssignNode.cpp  VarAssignNode.h  VarIdNode.cpp  VarIdNode.h  VarNode.cpp  VarNode.h
tests/: LexerTest.cpp  ParserTest.cpp
